# PrintLogCollector

./: .gitignore  LICENSE  README.md  WhatsNew.txt  constants.py  dbcm.py  log_collector.py  logging_config.ini  pyproject.toml  readme.txt
scripts/fixtures/sql/: DDL_DB.sql  DDL_Logs.sql
tests/: test_log_collector.py
